--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "knex": "knex"
   },
   "dependencies": {
+    "knex": "^2.0.0",
+    "mysql": "^2.18.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
